データは決め打ちでとりあえずwedgetだけ実装

--- a/widget/Info.plist
+++ b/widget/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>widget</string>
+	<string>通勤特急[中目黒]</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
