fix bug and add test

--- a/commuter.xcodeproj/xcshareddata/xcschemes/commuter.xcscheme
+++ b/commuter.xcodeproj/xcshareddata/xcschemes/commuter.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5DF3971C1BDD0B6F005C0259"
+               BuildableName = "commuterTests.xctest"
+               BlueprintName = "commuterTests"
+               ReferencedContainer = "container:commuter.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
